--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "jeopardy-backend",
   "version": "1.0.0",
   "description": "Backend server for jeopardy",
-  "main": "index.js",
+  "main": "dist/server.js",
+  "scripts": {
+    "tsc-node-start": "./node_modules/typescript/bin/tsc && node dist/server.js",
+    "start": "tsc && node dist/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^13.9.5",
     "bufferutil": "^4.0.1",
+    "core-util-is": "^1.0.2",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
+    "typescript": "^3.8.3",
     "utf-8-validate": "^5.0.2"
   }
 }
