--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend server for jeopardy",
   "main": "dist/server.js",
   "scripts": {
+    "build": "./node_modules/typescript/bin/tsc",
     "tsc-node-start": "./node_modules/typescript/bin/tsc && node dist/server.js",
     "start": "tsc && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
